--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -18,13 +18,13 @@ Fonts are separated by a | */
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #415a77;  /* headlines on a white background */ 
   --headline-color-on-color: #e0e1dd; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #1b263b; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #415a77; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #e0e1dd; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #1b263b;
+  --paragraph-background-color: #415a77;
   --nav-link-color: #e0e1dd;
-  --nav-background-color: #1b263b;
+  --nav-background-color: #415a77;
   --nav-hover-link-color: #e0e1dd;
-  --nav-hover-background-color: #415a77;
+  --nav-hover-background-color: #1b263b;
 }
 
 
