--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,15 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Lobster&family=Lobster+Two&family=Roboto+Mono&family=Roboto+Slab&family=Roboto:wght@300&display=swap');
+/*
+font-family: 'Aclonica', sans-serif;
+font-family: 'Lobster', cursive;
+font-family: 'Lobster Two', cursive;
+font-family: 'Roboto', sans-serif;
+font-family: 'Roboto Mono', monospace;
+font-family: 'Roboto Slab', serif;
+*/
+
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -7,6 +19,7 @@ nav a {
     text-align: center;
     color: #e0e1dd;
     text-decoration: none;
+    padding: 35px;
 }
 
 #hero-msg h1, #hero-msg h4 {
@@ -29,6 +42,10 @@ main section {
 
 body {
     background-color: #415a77;
+    font-family: 'Roboto', sans-serif, 'Roboto Mono', monospace, 'Roboto Slab', serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -45,6 +62,10 @@ nav a:hover {
     background-color: #e0e1dd;
     color: #1b263b;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover, .join:hover {
@@ -54,14 +75,21 @@ nav a:hover {
 
 .msg {
     background-color: #778da9;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 footer {
     background-color: #1b263b;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 .home-title {
     color: #e0e1dd;
+    font-family: 'Lobster', cursive, 'Lobster Two', cursive, 'Aclonica', sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 h4 {
@@ -74,6 +102,7 @@ h4 {
 
 .msg p {
     color: #e0e1dd;
+    padding-bottom: 15px;
 }
 
 footer h3{
@@ -91,14 +120,21 @@ footer a:hover {
 
 h2 {
     color: #e0e1dd;
+    margin: 0;
 }
 
 .logo {
     width: 80px;
+
+}
+
+#logo_link {
+    padding-top: 5px;
 }
 
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 
 #hero-img {
@@ -107,4 +143,23 @@ h2 {
 
 footer h3 a:hover {
     text-decoration: underline;
+}
+
+.social img {
+    padding-top: 15px;
+}
+
+.rivers-card, 
+.camping-card, 
+.rapids-card {
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 10px solid #ffb703;
+}
+
+
+main section img {
+    box-sizing: border-box;
 }
