--- a/positionstyles.css
+++ b/positionstyles.css
@@ -4,39 +4,33 @@
   /* This is the parent of the activity 1 boxes. */
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  row-gap: 10px;
-  column-gap: 10px;
-
+  justify-items: center;
+  grid-template-rows: 1fr 2fr 2fr 1fr;
+  grid-gap: 20px;
 }
-.red1 { 
-  position: relative;
+.red1 {  
   grid-column: 1/3;
-  grid-row: 1/2;
-
-
-  width: 100px; 
   height: 100px; 
+  width: 100%;
   background-color: red; 
-
 } 
 .green1 {
-  position: relative;
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
+  margin: 0 50px;
   background-color: green; 
 
 } 
 .yellow1 {
-  position: relative;
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
+  margin: 0 50px; 
   background-color: gold; 
 } 
 .blue1 {
-  position: relative;
-  width: 100px; 
-  height: 100px; 
+  height: 100px;
+  width: 100%; 
+  grid-column: 1/3;
   background-color: blue; 
 } 
 /* Activity 2 styles */ 
