--- a/positionstyles.css
+++ b/positionstyles.css
@@ -36,125 +36,175 @@
 /* Activity 2 styles */ 
 .content2 {
   /* This is the parent of the activity 2 boxes. */
+  display: grid;
+  grid-template-columns: 50px 50px 50px 50px 50px;
+  justify-items: center;
+  grid-template-rows: 50px 50px 50px 50px 50px;
+  grid-gap: 0px;
 }
 .red2 {
-  width: 100px; 
-  height: 100px; 
+  grid-column: 1/3;
+  grid-row: 1/3;
+  width: 100%; 
+  height: 100%; 
   background-color: red; 
 } 
 .green2 { 
-  width: 100px; 
-  height: 100px; 
+  grid-column: 2/4;
+  grid-row: 2/4;
+  width: 100%; 
+  height: 100%; 
   background-color: green; 
 } 
 .yellow2 {
-  width: 100px; 
-  height: 100px; 
+  grid-column: 3/5;
+  grid-row: 3/5;
+  width: 100%; 
+  height: 100%; 
   background-color: gold; 
 } 
 .blue2 {
-  width: 100px; 
+  grid-column: 4/6;
+  grid-row: 4/6;
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
 } 
 /* Activity 3 styles */ 
 .content3 {
   /* This is the parent of the activity 3 boxes. */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  grid-template-rows: 1fr 2fr 1fr;
+  column-gap: 60px;
 }
 .red3 {
-  width: 100px; 
+  grid-column: 1/3;
   height: 100px; 
+  width: 100%; 
   background-color: red; 
 } 
 .green3 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: green;
 } 
 .yellow3 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: gold; 
 } 
 .blue3 {
-  width: 100px;
+  grid-column: 1/3;
+  width: 100%;
   height: 100px; 
   background-color: blue; 
 } 
 /* Activity 4 styles */ 
 .content4 {
   /* This is the parent of the activity 4 boxes. */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   height: 400px;
 }
 .red4 {
-  width: 100px; 
-  height: 100px; 
+  grid-column: 1/3;
+  grid-row: 1/4;
+  width: 50%; 
+  height: 100%; 
   background-color: red; 
 } 
 .green4 {
-  width: 100px; 
-  height: 100px; 
+  grid-column: 2/3;
+  grid-row: 1/2;
+  width: 100%; 
+  height: 100%; 
   background-color: green; 
 } 
 .yellow4 {
-  width: 100px; 
-  height: 100px; 
+  grid-column: 2/3;
+  grid-row: 2/3;
+  width: 100%; 
+  height: 100%; 
   background-color: gold; 
 } 
 .blue4 {
-  width: 100px; 
-  height: 100px; 
+  grid-column: 2/3;
+  grid-row: 3/4;
+  width: 100%; 
+  height: 100%; 
   background-color: blue; 
 } 
 /* Activity 5 styles */ 
 .content5 {
   /* This is the parent of the activity 5 boxes. */
+  grid-template-rows: 1fr 3fr 1fr;
   height: 400px;
 }
 .red5 { 
-  width: 100px; 
+  grid-column: 1;
+  grid-row: 1/2;
+  width: 100%; 
   height: 100px; 
   background-color: red; 
 } 
 .green5 { 
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 180px;
+  float: left; 
   background-color: green; 
+  margin-bottom: 10px;
 
 } 
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
+  grid-column: 1;
+  grid-row: 2/3;
+  width: 100%; 
+  height: auto; 
+  background-color: yellow; 
+
 
 } 
 .blue5 {
-  width: 100px; 
+  grid-column: 1;
+  grid-row: 3/4;
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
 } 
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  display: grid;
+  grid-template-columns: 100px 100px 100px 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px 100px 100px 100px;
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
+  grid-column: 1/5;
+  grid-row: 1/3;
+  width: 400px; 
+  height: 200px; 
   background-color: red; 
 } 
 .green6 {
-  width: 100px; 
-  height: 100px; 
+  grid-area: 5/1/7/3;
+  width: 200px; 
+  height: 200px; 
   background-color: green; 
 } 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
+  grid-area: 3/5/7/7;
+  width: 200px; 
+  height: 400px; 
+  z-index: 1;
   background-color: gold; 
 } 
 .blue6 {
-  width: 100px; 
-  height: 100px; 
+  grid-area: 2/2/7/6;
+  width: 400px; 
+  height: 400px; 
   background-color: blue; 
 } 
 
