--- a/positionstyles.css
+++ b/positionstyles.css
@@ -184,28 +184,28 @@
 .red6 {
   grid-column: 1/5;
   grid-row: 1/3;
-  width: 400px; 
-  height: 200px; 
+  width: 100%; 
+  height: 100%; 
   background-color: red; 
 } 
 .green6 {
   grid-area: 5/1/7/3;
-  width: 200px; 
-  height: 200px; 
+  width: 100%; 
+  height: 100%; 
   background-color: green;
   z-index: 1; 
 } 
 .yellow6 {
   grid-area: 3/5/7/7;
-  width: 200px; 
-  height: 400px; 
+  width: 100%; 
+  height: 100%; 
   z-index: 1;
   background-color: gold; 
 } 
 .blue6 {
   grid-area: 2/2/7/6;
-  width: 400px; 
-  height: 400px; 
+  width: 100%; 
+  height: 100%; 
   background-color: blue; 
 } 
 
