--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -9,6 +9,44 @@ font-family: 'Roboto Mono', monospace;
 font-family: 'Roboto Slab', serif;
 */
 
+/* .home-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 0.3fr 1fr 0.3fr 0.3fr 0.2fr 1fr 0.2fr 0.3fr 0.3fr;
+} */
+
+
+main {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    justify-content: center;
+}
+
+.rivers-card {
+    grid-area: 2/2/3/4;
+    width: 100%; 
+    height: 100%;
+}
+.camping-card {
+    grid-area: 2/5/3/7;
+    width: 100%; 
+    height: 100%;
+}
+
+.rapids-card {
+    grid-area: 2/8/3/10;
+    width: 100%;
+    height: 100%;
+
+}
+
+#background {
+    height: 725px;
+    background-color: #ffb703;
+    grid-column: 1/-1;
+    grid-row: 4/9;
+}
+
 
 #content {
     max-width: 1600px;
@@ -17,9 +55,10 @@ font-family: 'Roboto Slab', serif;
 
 nav a {
     text-align: center;
-    color: #e0e1dd;
+    color: black;
     text-decoration: none;
     padding: 35px;
+
 }
 
 #hero-msg h1, #hero-msg h4 {
@@ -35,11 +74,6 @@ main section {
 }
 
 
-#background {
-    height: 725px;
-    background-color: #ffb703;
-}
-
 body {
     background-color: #415a77;
     font-family: 'Roboto', sans-serif, 'Roboto Mono', monospace, 'Roboto Slab', serif;
@@ -49,17 +83,26 @@ body {
 }
 
 header {
-    background-color: #778da9;
+    background-color: #ffb703;
+    display: grid;
+    grid-template-columns: 150px auto;
+    
+    
 }
 
 nav a:hover {
     background-color: #1b263b;
-    color: #e0e1dd;
+    color: white;
 
 }
 
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
 .book, .join {
-    background-color: #e0e1dd;
+    background-color: white;
     color: #1b263b;
     text-decoration: none;
     font-size: 18px;
@@ -70,19 +113,25 @@ nav a:hover {
 
 .book:hover, .join:hover {
     background-color: #1b263b;
-    color: #e0e1dd;
+    color: white;
 }
 
 .msg {
     background-color: #778da9;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #778da9;
 }
 
 footer {
     background-color: #1b263b;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .home-title {
@@ -93,33 +142,33 @@ footer {
 }
 
 h4 {
-    color: #e0e1dd;
+    color: white;
 }
 
 .msg h2 {
-    color: #e0e1dd;
+    color: white;
 }
 
 .msg p {
-    color: #e0e1dd;
+    color: white;
     padding-bottom: 15px;
 }
 
 footer h3{
-    color: #e0e1dd;
+    color: white;
 }
 
 footer a {
-    color: #e0e1dd;
+    color: white;
     text-decoration: none;
 }
 
 footer a:hover {
-    color: #e0e1dd;
+    color: white;
 }
 
 h2 {
-    color: #e0e1dd;
+    color: white;
     margin: 0;
 }
 
@@ -130,6 +179,8 @@ h2 {
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .icon {
@@ -157,9 +208,93 @@ footer h3 a:hover {
 
 .card-img {
     border: 10px solid #ffb703;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px black;
+    
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 
 
 main section img {
     box-sizing: border-box;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg h4 {
+    color: white;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+  
+.card-img, .mountains {
+    width: 100%;
+}
+
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    width: 100%;
+    height: 100%;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
