--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,28 +2,28 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Domine:wght@600&family=Orelega+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Lobster&family=Lobster+Two&family=Roboto+Mono&family=Roboto+Slab&family=Roboto:wght@300&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #1b263b   ;
-  --secondary-color: #415a77 ;
+  --secondary-color: #ffb703 ;
   --accent1-color: #778da9;
-  --accent2-color: #e0e1dd;
+  --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Annie Use Your Telescope";
-  --paragraph-font: Orelega One;
+  --heading-font: 'Lobster', cursive, 'Lobster Two', cursive, 'Aclonica', sans-serif;
+  --paragraph-font: font-family: 'Roboto', sans-serif, 'Roboto Mono', monospace, 'Roboto Slab', serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #415a77;  /* headlines on a white background */ 
-  --headline-color-on-color: #e0e1dd; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #415a77; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #e0e1dd; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #415a77;
-  --nav-link-color: #e0e1dd;
-  --nav-background-color: #415a77;
-  --nav-hover-link-color: #e0e1dd;
+  --headline-color-on-white: #778da9;  /* headlines on a white background */ 
+  --headline-color-on-color: white; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #ffb703; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: black; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #778da9;
+  --nav-link-color: black;
+  --nav-background-color: #ffb703;
+  --nav-hover-link-color: white;
   --nav-hover-background-color: #1b263b;
 }
 
