--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -58,6 +58,7 @@ nav a {
     color: black;
     text-decoration: none;
     padding: 35px;
+    font-family: 'Roboto', sans-serif, 'Roboto Mono', monospace, 'Roboto Slab', serif;
 
 }
 
@@ -204,6 +205,7 @@ footer h3 a:hover {
 .camping-card, 
 .rapids-card {
     margin: 200px 0;
+    
 }
 
 .card-img {
