--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -123,7 +123,7 @@ nav {
     padding: 35px;
     grid-column: 6/10;
     grid-row: 6/7;
-    box-shadow: 5px 5px 10px #778da9;
+    box-shadow: 5px 5px 10px black;
 }
 
 footer {
@@ -136,7 +136,7 @@ footer {
 }
 
 .home-title {
-    color: #e0e1dd;
+    color: black;
     font-family: 'Lobster', cursive, 'Lobster Two', cursive, 'Aclonica', sans-serif;
     font-size: 2em;
     margin-top: 10px;
@@ -256,7 +256,7 @@ main section img {
     grid-row: 5/8;
     width: 100%;
     height: 100%;
-    box-shadow: 5px 5px 10px #6f7364;
+    box-shadow: 5px 5px 10px black;
 }
 
 @media screen and (max-width: 900px) {
@@ -282,7 +282,7 @@ main section img {
     }
     .home-title {
         font-size: 25px;
-        color: #6f7364;
+        color: white;
     }
     .rivers-card, .camping-card, .rapids-card { 
         margin: 50px auto;
