--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -136,7 +136,7 @@ footer {
 }
 
 .home-title {
-    color: black;
+    color: white;
     font-family: 'Lobster', cursive, 'Lobster Two', cursive, 'Aclonica', sans-serif;
     font-size: 2em;
     margin-top: 10px;
