--- a/personal_website/styles/site-plan.css
+++ b/personal_website/styles/site-plan.css
@@ -25,10 +25,10 @@ Fonts are separated by a | */
   --paragraph-color-on-color: white;
   /* paragraph text on a colored background */
   --paragraph-background-color: #396E94;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
+  --nav-link-color: white;
+  --nav-background-color: black;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --nav-hover-background-color: #e63946;
 }
 
 
