--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -260,9 +260,11 @@ main section img {
     box-shadow: 5px 5px 10px black;
 }
 
-/*---------*/
-/*   FAQ   */
-/*---------*/
+/*-----------------------------------------*/
+/*                                         */
+/*                 FAQ                     */
+/*                                         */
+/*-----------------------------------------*/
 
 .story {
     grid-column: 2/-2;
@@ -307,7 +309,6 @@ main section img {
     width: 100%; 
     content: center;
     margin-bottom: 30px;
-    opacity: 0.8;
     
 }
 
