adding space between the questios in faq subpage

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -272,6 +272,7 @@ main section img {
     grid-template-columns: repeat(12, 1fr);
     background-color: #778da9;
     color: #fff;
+    margin: .5em;
 }
 
 .story summary {
