--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -302,6 +302,78 @@ main section img {
 }
 
 
+/*-----------------------------------------*/
+/*                                         */
+/*            Contact Us                  */
+/*                                         */
+/*-----------------------------------------*/
+
+main {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    justify-content: center;
+}
+
+legend {
+    box-sizing: border-box;
+    color: #fff;
+    display: table;
+    max-width: 100%;
+    padding: 1em;
+    white-space: normal;
+    content: center;
+}
+
+
+.contactform {
+    grid-column: 4/8;
+    grid-row:    3/5;
+}
+
+.contactform div {
+    display:               grid;
+    grid-template-columns: 1fr 3fr;
+    grid-gap:              0 1em;
+    margin:                5px;
+}
+
+.contactform div>label {
+    grid-column:  1;
+    justify-self: right;
+    color: #fff;
+
+}
+
+.contactform div>input,
+.contactform div>textarea {
+    grid-column:  2;
+    justify-self: left;
+    width:        100%;
+}
+
+.contactform button {
+    background-color: #ffb703;
+    color:            #fff;
+    width:            50%;
+    text-align:       center;
+    padding:          1em;
+}
+
+input:active,
+textarea:focus-visible {
+    border: 2px solid #ff0000;
+}
+
+#feedback {
+    background-color: #778da9;
+    color: #fff;
+    padding: 0.5em;
+    display: none;
+}
+
+
+
+
 
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
