--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -275,7 +275,7 @@ main section img {
     margin: .5em;
 }
 
-.story summary {
+/* .story summary {
     grid-column: 1/5;
     grid-row: 1;
     padding: 1em;
@@ -283,6 +283,38 @@ main section img {
     color: #fff;
     font-size: 1.25em;
     font-family: 'Roboto', sans-serif, 'Roboto Mono', monospace, 'Roboto Slab', serif;
+} */
+
+summary {
+    color:           var(--color-white);
+    overflow:        hidden;
+    display:         flex;
+    justify-content: space-between;
+    padding:         1em;
+    background:      #ffb703;
+    font-weight:     bold;
+    cursor:          pointer;
+}
+
+summary:hover {
+    background: #1a252f;
+}
+
+details summary::after {
+    content:    "\276F";
+    width:      1em;
+    height:     1em;
+    text-align: center;
+    transition: all 0.35s;
+}
+
+details[open] summary::after {
+    content:    "\276F";
+    transform:  rotate(90deg);
+    width:      1em;
+    height:     1em;
+    text-align: center;
+    transition: all 0.35s;
 }
 
 .story p {
@@ -294,6 +326,7 @@ main section img {
 .hero-img-faq {
     width: 100%; 
     margin-bottom: 30px;
+    border: 10px solid #778da9;
 }
 
 .content-faq {
