--- a/personal_website/styles/style.css
+++ b/personal_website/styles/style.css
@@ -1,55 +1,372 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Open+Sans:wght@300&display=swap');
 
-/* 
-.containerxd{
-    width: 500px;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
-    overflow: hidden;
-    border: 10px solid #ffffff;
-    border-radius: 50px;
-    box-shadow: 10px 25px 30px rgba(0,0,0,0.3);
+* {
+    box-sizing: border-box;
 }
-.wrapper{
+
+:root {
+    /* change the values below to your colors from your palette */
+    --primary-color: #e63946;
+    --secondary-color: #457B9D;
+    --accent1-color: #A8DADC;
+    --accent2-color: #FFFFFF;
+
+    /* change the values below to your chosen font(s) */
+    --heading-font: 'Josefin Sans', sans-serif;
+    --paragraph-font: 'Open Sans', sans-serif;
+
+
+    /* these colors below should be chosen from among your palette colors above */
+    --headline-color-on-white: #396E94;
+    /* headlines on a white background */
+    --headline-color-on-color: white;
+    /* headlines on a colored background */
+    --paragraph-color-on-white: #396E94;
+    /* paragraph text on a white background */
+    --paragraph-color-on-color: white;
+    /* paragraph text on a colored background */
+    --paragraph-background-color: #105F9E;
+    --nav-link-color: white;
+    --nav-background-color: black;
+    --nav-hover-link-color: white;
+    --nav-hover-background-color: #e63946;
+}
+
+
+#content {
+    width:100%;
+    min-width:1000px;
+    height:auto;
+    background-color: var(--nav-background-color);
+}
+
+body {
+    background-color: var(--nav-background-color);
+    color: var(--paragraph-color-on-color);
+    font-family: var(--paragraph-font);
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+
+#banner {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
+
+#banner-box {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+
+/*-----------------------------------------*/
+/*               HEADER                    */
+/*-----------------------------------------*/
+
+header {
+    display: grid;
+    grid-template-columns: repeat(3 1fr);
+    grid-template-rows: 100px 100px;
+    align-items: center;
+}
+
+.leftnav {
+    grid-column: 1;
+    grid-row: 1;
+    padding: 2em;
+}
+
+.centernav {
+    grid-column: 2;
+    grid-row: 1;
+    padding: 0px;
+}
+
+.rightnav {
+    grid-column: 3;
+    grid-row: 1;
+    padding: 2em;
+}
+
+nav {
+    grid-column: 1;
+    grid-row: 1;
+    display: grid;
+    justify-items: center;
+    font-size: 25px;
+    background-color: transparent;
+    margin: auto;
+
+}
+
+nav a {
+    padding: 1em;
+    color: #fff;
+    letter-spacing: 1px;
+    text-decoration-line: none;
+}
+
+
+nav a:hover {
+    color: white;
+    text-decoration-line: underline;
+    text-decoration-color: var(--nav-hover-background-color);
+    text-underline-offset: 1rem;
+}
+
+.rectangle {
+    display: block;
+    grid-column: 1;
+    grid-row: 2;
     width: 100%;
-    display: flex;
-    animation: slide 16s infinite;
+    height: 50%;
+    background: #105F9E;
 }
-@keyframes slide{
-    0%{
-        transform: translateX(0);
-    }
-    25%{
-        transform: translateX(0);
-    }
-    30%{
-        transform: translateX(-100%);
-    }
-    50%{
-        transform: translateX(-100%);
-    }
-    55%{
-        transform: translateX(-200%);
-    }
-    75%{
-        transform: translateX(-200%);
-    }
-    80%{
-        transform: translateX(-300%);
-    }
-    100%{
-        transform: translateX(-300%);
-    }
-}
-*/
 
-.img_main{
-    width: 300px;
-    height: 360px;
-} 
+/*-----------------------------------------*/
+/*                MAIN                     */
+/*-----------------------------------------*/
+
+.home-grid {
+    display: block;
+    height: auto;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+main {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    margin: auto;
+}
+
+section {
+    display: block;
+}
+
+.main-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.message {
+    grid-column: 1/2;
+    grid-row: 1;
+    height: 100%;
+    width: 100%;
+    text-align: justify;
+    /* background-color: #105F9E; */
+    line-height: 1.5em;
+    padding: 30px;
+}
+.carousel {
+    grid-column: 2/3;
+    grid-row: 1;
+    height: 100%;
+    width: 100%;
+    padding: 70px;
+}
+/*-----------------------------------------*/
+/*             slider images               */
+/*-----------------------------------------*/
+
+.carousel {
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+ul.slides {
+    display: block;
+    position: relative;
+    height: 500px;
+    width: 400px;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    list-style: none;
+}
+
+.slides * {
+    user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+}
+
+ul.slides input {
+    display: none; 
+}
+
+
+.slide-container { 
+    display: block; 
+}
+
+.slide-image {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    opacity: 0;
+    transition: all .7s ease-in-out;
+}   
+
+.slide-image img {
+    width: auto;
+    min-width: 100%;
+    height: 100%;
+}
+
+.carousel-controls {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    font-size: 100px;
+    line-height: 600px;
+    color: #fff;
+}
+
+.carousel-controls label {
+    display: none;
+    position: absolute;
+    padding: 0 20px;
+    opacity: 0;
+    transition: opacity .2s;
+    cursor: pointer;
+}
+
+.slide-image:hover + .carousel-controls label{
+    opacity: 0.5;
+}
+
+.carousel-controls label:hover {
+    opacity: 1;
+}
+
+.carousel-controls .prev-slide {
+    width: 49%;
+    text-align: left;
+    left: 0;
+}
+
+.carousel-controls .next-slide {
+    width: 49%;
+    text-align: right;
+    right: 0;
+}
+
+.carousel-dots {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    z-index: 999;
+    text-align: center;
+}
+
+.carousel-dots .carousel-dot {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: 0.5;
+    margin: 10px;
+}
+
+input:checked + .slide-container .slide-image {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 1s ease-in-out;
+}
+
+input:checked + .slide-container .carousel-controls label {
+     display: block; 
+}
+
+input#img-1:checked ~ .carousel-dots label#img-dot-1,
+input#img-2:checked ~ .carousel-dots label#img-dot-2,
+input#img-3:checked ~ .carousel-dots label#img-dot-3,
+input#img-4:checked ~ .carousel-dots label#img-dot-4,
+input#img-5:checked ~ .carousel-dots label#img-dot-5,
+input#img-6:checked ~ .carousel-dots label#img-dot-6 {
+	opacity: 1;
+}
+
+
+input:checked + .slide-container .nav label { display: block; }
+
+/*-----------------------------------------*/
+/*             footer                      */
+/*-----------------------------------------*/
+
+footer {
+    color: var(--color-white);
+    background-color: var(--nav-hover-background-color);
+    padding: 25px 50px;
+    margin: 200px 0 0 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 1rem;
+}
+
 
 .social-media {
     width: 60px;
     height: 60px;
+}
+
+
+
+
+@media screen and (max-width: 900px) {
+    .banner .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #banner {
+        margin-top: 0;
+    }
+    #banner-box {
+        margin-top: 0;
+    }
+    #content {
+        max-width: 100%;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: white;
+    }
+    .carousel { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .message {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
