--- a/personal_website/styles/style.css
+++ b/personal_website/styles/style.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Open+Sans:wght@300&display=swap');
 
-* {
-    box-sizing: border-box;
-}
 
 :root {
     /* change the values below to your colors from your palette */
@@ -33,13 +30,6 @@
 }
 
 
-#content {
-    width:100%;
-    min-width:1000px;
-    height:auto;
-    background-color: var(--nav-background-color);
-}
-
 body {
     background-color: var(--nav-background-color);
     color: var(--paragraph-color-on-color);
@@ -47,17 +37,26 @@ body {
     font-size: 22px;
     margin: 0;
     padding: 0;
+
 }
 
-#banner {
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+img {
+    max-width: 100%;
 }
+
 
 #banner-box {
     grid-column: 2;
     grid-row: 1;
+    max-width: 100%;
+    height: auto;
 }
+
+.responsive {
+    max-width: 100%;
+    height: 100%;
+}
+
 
 
 /*-----------------------------------------*/
@@ -119,54 +118,48 @@ nav a:hover {
     display: block;
     grid-column: 1;
     grid-row: 2;
-    width: 100%;
-    height: 50%;
-    background: #105F9E;
+    max-width: 100%;
+    height: 50px;
+    background-color: #105F9E;
+}
+
+.logo {
+    position: relative;
+    z-index: 9;
 }
 
 /*-----------------------------------------*/
 /*                MAIN                     */
 /*-----------------------------------------*/
 
-.home-grid {
-    display: block;
-    height: auto;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-main {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: center;
-    margin: auto;
-}
-
-section {
-    display: block;
-}
-
 .main-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    margin: 0 auto;
+    padding: 0 1em;
+    max-width: 100%;
 }
 
 .message {
-    grid-column: 1/2;
+    grid-column: 1;
     grid-row: 1;
     height: 100%;
     width: 100%;
     text-align: justify;
-    /* background-color: #105F9E; */
-    line-height: 1.5em;
-    padding: 30px;
+    padding: 0 1em;
 }
-.carousel {
-    grid-column: 2/3;
+.slides {
+    grid-column: 2;
     grid-row: 1;
     height: 100%;
     width: 100%;
-    padding: 70px;
+    display: block;
+    padding: 50px;
+    margin: 50px;
 }
+
+
+
 /*-----------------------------------------*/
 /*             slider images               */
 /*-----------------------------------------*/
@@ -179,8 +172,7 @@ section {
 ul.slides {
     display: block;
     position: relative;
-    height: 500px;
-    width: 400px;
+    height: 600px;
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -308,65 +300,66 @@ input:checked + .slide-container .nav label { display: block; }
 
 footer {
     color: var(--color-white);
-    background-color: var(--nav-hover-background-color);
+    background-color: #105F9E;
     padding: 25px 50px;
     margin: 200px 0 0 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
     font-size: 1rem;
+    text-decoration: none;
 }
 
 
 .social-media {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
+    text-decoration: none;
+}
+
+.social {
+    background-color: #fff;
+    padding: 10px;
+    text-decoration: none;
+}
+
+footer a {
+    text-decoration: none;
+    text-decoration-color: none;
+    color: #fff;
 }
 
 
+@media (max-width: 40em) {
 
+    .main-grid {
+        display: block;
+    }
 
-@media screen and (max-width: 900px) {
+    header, nav {
+        display: block;
+        
+    }
+
     .banner .home-grid {
         display: block;
         height: auto;
     }
+
     nav, footer {
         flex-direction: column;
     }
     nav a {
-        display: block;
+        display:flex;
         padding: 15px;
     }
-    #banner {
-        margin-top: 0;
-    }
-    #banner-box {
-        margin-top: 0;
-    }
-    #content {
-        max-width: 100%;
-    }
-    #hero-msg h4 {
-        display: none;
-    }
-    .home-title {
-        font-size: 25px;
-        color: white;
-    }
-    .carousel { 
-        margin: 50px auto;
-        width: 60%;
-    }
-    #background {
-        display: none;
-    }
     .message {
-        width: 80%;
+        width: 100%;
         display: block;
         margin: 0 auto;
     }
     footer {
         margin-top: 25px;
     }
+
 }
