--- a/personal_website/styles/style.css
+++ b/personal_website/styles/style.css
@@ -359,28 +359,75 @@ footer a {
     padding: 35px;
     background-color:var(--accent1-color);
     color: black;
-
 }
-
 
 #grid-works {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+    gap: 20px;
+    margin: 0 auto;
+    padding: 0 1em;
+}
+
+.card_img {
+    border: 5px solid var(--primary-color);
+    box-shadow: 5px 5px 10px var(--primary-color);
+}
+
+.title_h3 {
+    background-color: var(--primary-color);
+    margin-bottom: 0;
+    border: 5px solid var(--primary-color);
 }
 
 .image_instagram {
     display: grid;
     grid-area: 1 / 1 / 2 / 2;
     justify-content: center;
-    
+    padding: 40px;
 }
 
 .instagram_section {
     display: grid;
     grid-area: 1 / 2 / 2 / 3;
+    padding: 25px;
+    text-align: justify;
+}
+
+.youtube_section {
+    display: grid;
+    grid-row: 2/3;
+    grid-column: 2/3;
+    padding: 25px;
+    text-align: justify;
+}
+
+.image_youtube {
+    display: grid;
+    grid-row: 2 /3;
+    grid-column: 1 / 2;
+    justify-content: center;
+    padding: 40px;
+}
+
+.image_tiktok {
+    display: grid;
+    grid-row: 3/4;
+    grid-column: 1/2;
+    padding: 40px;
     justify-content: center;
 }
+
+.tiktok_section {
+    display: grid;
+    grid-row: 3/4;
+    grid-column: 2/3;
+    padding: 25px;
+    text-align: justify;  
+}
+
+
 
 
 @media (max-width: 40em) {
@@ -424,6 +471,10 @@ footer a {
 
     footer {
         margin-top: 25px;
+    }
+    /*------------------- main how works----------------------*/
+    #grid-works {
+        display: block;
     }
 
 }
