--- a/personal_website/styles/style.css
+++ b/personal_website/styles/style.css
@@ -347,7 +347,7 @@ footer a {
 /*            How works?                   */
 /*-----------------------------------------*/
 #content {
-    width: 1600px;
+    max-width: 1600px;
     margin: auto;
     background-color: var(--color-white);
 }
