fixing slides image in 40em

--- a/personal_website/styles/style.css
+++ b/personal_website/styles/style.css
@@ -591,6 +591,9 @@ details[open] summary::after {
     footer {
         margin-top: 25px;
     }
+    .slides {
+        height: 500px;
+    }
 
     /*------------------- main how works----------------------*/
     #grid-works {
