--- a/youtube_channel/styles/style.css
+++ b/youtube_channel/styles/style.css
@@ -135,6 +135,15 @@ nav a:hover {
     z-index: 0;
 }
 
+.logo_bot {
+    position: relative;
+    z-index: 0;
+    background: #FFFFFF;
+    padding: 0;
+    border-radius: 30px;
+
+}
+
 /*-----------------------------------------*/
 /*                MAIN                     */
 /*-----------------------------------------*/
@@ -227,8 +236,9 @@ footer {
 }
 
 .social {
-    background-color: #fff;
-    padding: 10px;
+    background-color: #FFFFFF;
+    padding: 5px;
+    border-radius: 30px;
 }
 
 footer a {
@@ -312,8 +322,8 @@ footer a {
 }
 
 .image_section {
-    height: 50%;
-    width: 50%;
+    height: 40%;
+    width: 40%;
 }
 
 .paragraph_section {
